# elf2uf2

./: .gitignore  Cargo.toml  license  readme.md
examples/: blink_led.elf  blink_led.uf2  firmware.elf  firmware.uf2
src/: cli.rs  converter.rs  lib.rs  main.rs  uf2.rs
src/binary/: error.rs  mod.rs  reader.rs  writer.rs
src/elf/: error.rs  header.rs  ident.rs  mod.rs  program.rs
